--- a/styles/_basic.scss
+++ b/styles/_basic.scss
@@ -5,5 +5,24 @@
 body {
     margin: 0;
     font-family: "Roboto", sans-serif;
-    ;
+}
+
+h1,h2,h3,h4,h5,h6,ul,button {
+    margin: 0;
+    padding: 0;
+
+}
+
+a {
+    text-decoration: none;
+    color: unset;
+
+}
+li {
+    list-style: none;
+}
+
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
 }
