--- a/styles/_mixins.scss
+++ b/styles/_mixins.scss
@@ -8,3 +8,26 @@ flex-direction: $direction;
 column-gap: $column-gap;
 row-gap: $row-gap;
 }
+
+@mixin font($size: 16, $weight: 400, $color: #fff, $style: normal) {
+    font: {
+        size: $size;
+        weight: $weight;
+        style: $style;
+    }
+    color: $color;
+}
+
+ @mixin position($type: relative, $zIndex: 1, $inset: -1, $top-or-bottom: top, $left-or-right: left, $value1: 0, $value2: 0 ) {
+    position: $type;
+    z-index: $zIndex;
+
+    @if $inset > -1 {
+        inset : $inset;
+    }
+    @else {
+      #{$top-or-bottom} :  $value1;
+      #{$left-or-right} :  $value2;
+    }
+
+ }
