--- a/styles/_cards.scss
+++ b/styles/_cards.scss
@@ -119,3 +119,33 @@
        width: 300px;     
     }
 }
+
+
+.wave-card {
+    @include m.d-flex(start, start, nowrap, column, 0, 35px);
+    width: 500px;
+    height: 275px;
+    background: url("../assets/wave_card_bg.svg") center/contain  no-repeat;
+
+    &__avatar {
+        margin: 20px 0 0 20px;
+    }
+
+    &__quote {
+        @include m.font(20px, 400, v.$color_white);
+        margin:0 30px;
+    }
+
+    @media (max-width: v.$media_md) {
+        width: 330px;
+        row-gap: 15px;
+        background: url("../assets/wave_card_bg.svg") 50% 0/contain no-repeat;
+
+        &__quote {
+            @include m.font(13px, 400, v.$color_white);
+        }
+
+    }
+
+
+}
