--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -1,13 +1,15 @@
-@use "variables" as v;
-@use "sass:color";
-@use "mixins" as m;
-@use "placeholders";
+@use 'variables' as v;
+@use 'mixins' as m;
+@use 'placeholders';
+@use 'sass:color';
 
 .header {
     width: 100%;
     height: 50px;
     background-color: color.adjust(v.$color_white, $alpha: -0.85);
-    border-bottom: 1px solid v.$color_white;
+    // background-color: v.$color_blue;
+
+    // border-bottom: 1px solid v.$color_white;
     border: {
         bottom: {
             width: 1px;
@@ -24,7 +26,7 @@
             height: 100%;
             width: 255px;
             border-right: 1px solid v.$color_white;
-            @include m.d-flex();
+            @include m.d-flex(center, center);
 
             &-link {
                 font-size: 25px;
@@ -40,12 +42,12 @@
         }
 
         &__links {
-            flex-grow: 1; 
-        
+            flex-grow: 1;
+
             .list {
-                @include m.d-flex(start, center, nowrap, row, min(100px, 5vw), 0); 
+                @include m.d-flex(start, center, nowrap, row, min(100px, 5vw), 0);
                 padding: 0 0 0 min(100px, 5vw);
-                
+
                 &__item {
                     &-link {
                         font-size: 22px;
@@ -54,23 +56,21 @@
 
                         @extend %hover-black;
                     }
-
                 }
             }
 
             @media (max-width: v.$media_lg) {
                 .list {
-                    @include m.d-flex(center, center, nowrap, row, min(100px, 5vw), 0); 
+                    @include m.d-flex(center, center, nowrap, row, min(100px, 5vw), 0);
                     padding: 0 0 0 0;
                 }
             }
-
         }
 
         .covid {
             height: 100%;
-            padding: 0 30px;            
-            @include m.d-flex();
+            @include m.d-flex(center, center);
+            padding: 0 30px;
 
             border: {
                 left: 1px solid v.$color_white;
@@ -78,16 +78,19 @@
             }
 
             &__link {
+                font-size: 16px;
+                font-weight: 700;
                 color: v.$color_white;
+
                 @extend %hover-black;
             }
         }
 
         .globe {
             width: 90px;
-            @include m.d-flex();
+            @include m.d-flex(center, center);
 
-            &__link{
+            &__link {
                 &-icon {
                     width: 27px;
                     height: 28px;
@@ -95,5 +98,72 @@
                 }
             }
         }
+
+        @media (max-width: v.$media_md) {
+            &__links,
+            .covid,
+            .globe {
+                display: none;
+            }
+        }
+    }
+}
+
+.mobile-navigation {
+    display: none;
+
+    &__burger {
+        @include m.position(absolute, 10, -1, top, right, 13px, 20px);
+
+        &-icon {
+            width: 33px;
+            height: 22px;
+            stroke: v.$color_white;
+            @extend %hover-black-icon;
+        }
+    }
+
+    &__toggler {
+        display: none;
+
+        &:checked + .nav {
+            translate: 0;
+        }
+    }
+
+    .nav {
+        padding: 100px 70px 0;
+        @include m.position(fixed, 999, 0);
+        background-color: color.adjust(v.$color_black, $alpha: -0.5);
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        translate: 100% 0;
+        transition: translate .22s;
+
+        &__list {
+            @include m.d-flex(start, start, nowrap, column, 0, 20px);
+
+            &-item {
+                &-link {
+                    @include m.font(36px, 400, v.$color_white);
+                    text-shadow: 2px 2px 5px rgba(0,0,0.3);
+                }
+            }
+        }
+
+        &__close {
+            @include m.position(absolute, 10, -1, top, right, 18px, 23px);
+    
+            &-icon {
+                width: 25px;
+                height: 22px;
+                stroke: v.$color_white;
+                @extend %hover-black-icon;
+            }
+        }
+    }
+
+    @media (max-width: v.$media_md) {
+        display: block;
     }
 }
