--- a/styles/_hero.scss
+++ b/styles/_hero.scss
@@ -1,7 +1,7 @@
-@use "variables" as v;
-@use "sass:color";
-@use "mixins" as m;
-@use "placeholders";
+@use 'variables' as v;
+@use 'mixins' as m;
+@use 'placeholders';
+@use 'sass:color';
 
 .hero {
     position: relative;
@@ -9,11 +9,12 @@
     height: 830px;
     margin: 0 auto;
     padding: 140px 0 0 0;
-    background: url("../assets/img/cloud_alpha.png") center/contain no-repeat;
+    background: url('../assets/img/cloud_alpha.png') center/contain no-repeat;
 
     &__content {
         position: relative;
-        width: 900px;
+        width: 100%;
+        max-width: 900px;
         margin: 0 auto;
 
         .hero__title {
@@ -34,9 +35,11 @@
             &:hover {
                 background-color: color.adjust(v.$color_black, $alpha: -0.35);
             }
+
             &:focus {
                 outline: none;
             }
+
             &:focus-visible {
                 outline: 2px solid v.$color_white;
             }
@@ -57,7 +60,6 @@
         }
 
         @media (max-width: v.$media_md) {
-            width: 100%;
             max-width: 560px;
             height: 400px;
 
@@ -73,7 +75,6 @@
         }
 
         @media (max-width: v.$media_sm) {
-            width: 100%;
             max-width: 350px;
             height: 280px;
 
@@ -91,12 +92,11 @@
         background-color: color.adjust(v.$color_white, $alpha: -0.85);
         border-radius: 20px;
         @include m.d-flex(end, center, nowrap, row, 10px);
-        @include m.font(14px, 400, v.$color_black);
 
         &-img {
             width: 126px;
             height: 198px;
-            @include m.position(absolute, 1, -1, top, left, -75px, -45px);
+            @include m.position(absolute, 1, -1, top, left, -75px, -35px);
         }
 
         &-content {
@@ -114,67 +114,62 @@
             background: none;
             border: none;
             text-transform: uppercase;
-            border-radius: 5px;
             @include m.font(25px, 400, v.$color_black);
             @extend %hover-light;
 
             &:focus {
                 outline: none;
             }
+
             &:focus-visible {
                 outline: 2px solid v.$color_white;
+                border-radius: 5px;
             }
         }
 
         @media (max-width: v.$media_md) {
             width: 100%;
             max-width: 450px;
-            margin: 140px;
+            margin: 140px auto 0;
             height: fit-content;
             @include m.d-flex(start, center, nowrap, column, 0, 0);
 
             &-content {
                 width: 100%;
+                padding: 15px 10px 15px 90px;
                 border-right: none;
                 border-bottom: 1px solid v.$color_white;
                 line-height: 1.3;
-                padding: 15px 10px 15px 70px;
                 @include m.font(12px, 400, v.$color_black);
-
-                &-btn {
-                    @include m.font(30px, 400, v.$color_black);
-                    padding: 15px 0;
-                }
             }
-
-            @media (max-width: v.$media_sm)  {
-                &-img {
-                    @include m.position(absolute, 1, -1, top, left, -45px, -15px);
-                }
-
-                &-content {
-                    padding: 10px 10px 10px 100px;
-                    @include m.font(11px, 400, v.$color_black);
-    
-                }  
-
+            &-btn {
+                @include m.font(30px, 400, v.$color_black);
+                padding: 15px 0;
             }
-
-        }        
-
+        }
+        @media (max-width: v.$media_sm) {
+            &-img {
+                @include m.position(absolute, 1, -1, top, left, -45px, -15px);
+            }
+            &-content {
+                padding: 10px 10px 10px 100px;
+                @include m.font(11px, 400, v.$color_black);
+            }
+        }
     }
 
     &__scroll {
         @include m.position(absolute, 1, -1, bottom, left, 200px, 10px);
+
         &-content {
             position: relative;
-            writing-mode: vertical-lr;
-            cursor: pointer;
             @include m.font(16px, 500, v.$color_white);
+            writing-mode: vertical-rl;
+            cursor: pointer;
 
             &::after {
-                display: block;
                 content: "";
+                display: block;
                 @include m.position(absolute, 1, -1, top, left, 100px, 8px);
                 width: 1px;
                 height: 75px;
@@ -193,7 +188,7 @@
 
     @media (max-width: v.$media_md) {
         padding: 110px 15px 0;
-        background: url("../assets/img/cloud_alpha.png") 0 25% / contain no-repeat;
+        background: url('../assets/img/cloud_alpha.png') 0 25%/contain no-repeat;
     }
     @media (max-width: v.$media_sm) {
         height: 700px;
